@@ -1,6 +1,10 @@
 Change Notes
 ============
 
+2008-12-29	FLI
+	- Added listDataPoolKeys() to DataPoolManager.
+	- Added JDBCSerializerUtil
+	
 2008-12-15	FLI
 	- IDimension.getPath() now returns an empty string (as expected) and IDimensionElement.parsePath()
 	  returns "this" if the argument is an empty string. 
